--- a/html/musicsiteabout.html
+++ b/html/musicsiteabout.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ="stylesheet" href ="./../css/musicsite.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&family=Roboto:wght@300&display=swap" rel="stylesheet">
+   
+    
     <title>Muscials About Page</title>
 </head>
 <section>
@@ -23,10 +25,10 @@
      <h1 class="band-name band-name-large ">EvaService</h1>
     </header>
 
-<>
+
     <div class="content-section container">
         <h2 class="section-header">ABOUT</h2> 
-        <img class="service-image" src="./../images/people/africanwoman.jpg"width="400"float="left" alt="flower">
+        <img class="service-image" src="./..//images/album3.jpeg"width="400"float="left" alt="flower">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero maiores, omnis perspiciatis, maxime ipsam culpa excepturi natus unde quam temporibus ratione fugiat dolorum ipsa consectetur quod eligendi recusandae. Sed.
     Ipsum illo neque nihil temporibus asperiores molestias minus blanditiis ratione veritatis placeat facilis ea, eligendi non, debitis delectus corporis quisquam iusto ut nobis. Quisquam alias quibusdam possimus nemo ratione nisi!
     Reprehenderit eligendi, reiciendis doloremque aut, esse eum laborum natus distinctio ullam cum dolore eveniet quae labore porro amet maiores? At odio quos necessitatibus modi libero sed dignissimos quas natus asperiores.
@@ -39,7 +41,7 @@
     Optio perspiciatis, nisi id autem molestias explicabo. Atque velit nemo distinctio animi totam nobis assumenda et ab, quam amet dolore enim asperiores doloribus, inventore laudantium, maxime quasi eius deserunt cumque.</p>
     </div>
     <div>
-    <img class="service-image" src="./../images/people/smile.jpg"width="200" alt="smile">
+    <img class="service-image" src="./../images/album1.jpeg"width="200" alt="smile">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et a sit eveniet! Ipsum suscipit sed quia sint nulla itaque, cum praesentium minima quam debitis repellat. Et laborum delectus vitae aliquid.
     Minus magnam maxime cum consectetur voluptatum, non suscipit. Modi placeat magni adipisci consectetur, molestiae, fugit error impedit quibusdam fuga nobis ex quam commodi iure, tenetur inventore et corrupti. Aliquid, enim!
     Debitis architecto aliquam esse animi perferendis possimus placeat sit ea libero est, repellat doloribus in voluptas quidem nam quis dicta voluptatum accusantium quaerat expedita? Accusamus, perspiciatis sequi. Iusto, soluta amet!
